--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,7 @@ body {
   background-color:#B30A3E;
   background-image: url(../img/main/raspberry-background.png); 
   background-size: cover;
-  margin: 0 25px 0 25px;  
+  margin: 0 0 0 25px;  
   padding: 15px 0 0 15px; 
   
 }
@@ -216,8 +216,8 @@ body {
   background-size: cover;
   width: 1145px;
   min-height: 305px;
-  padding: 25px 25px 0 25px;
-  margin: 0 0 45px 0;
+  padding: 25px 20px 0 20px;
+  margin: 25px 0 45px 25px;
 }
 .ceo-title {
   font-size: 24px;
@@ -449,4 +449,76 @@ body {
 .active a {
  color: var(--second-color);
   padding: 7px 7px 7px 7px;
+}
+
+/*main grid Малина и Шоколад*/
+.banner-wrapper {
+  display: grid;
+  grid-template-columns: 2;
+  gap: 25px;
+}
+.raspberry {
+  grid-row: 1;
+  grid-column: 1;
+}
+.chocolate {
+  margin: 0;
+  grid-row: 1;
+  grid-column: 2;
+}
+/*HIT GRID*/
+.hit-list {
+  display: grid;
+  grid-template-columns: 4;
+  margin: 0 0 0 27px;
+}
+.hit-item {
+  grid-row: 1;
+}
+/*CEO Grid*/ 
+.ceo-text-wrapper {
+  display: grid;
+  grid-template-columns: 2;
+  
+}
+.ceo-text-left {
+  width: 485px ;
+  min-height: 55px;
+  grid-row: 1;
+}
+.ceo-text-right {
+  width: 485px;
+  grid-row:2;
+  min-height: 55px;
+}
+.news-email-wrapper {
+  display: grid;
+  grid-template-columns: 2;
+}
+.news-wrapper {
+  grid-row: 1;
+  grid-column: 1;
+}
+.email-wrapper {
+  grid-row: 1;
+  grid-column: 2;
+}
+
+/*Footer*/
+.main-footer {
+  display: grid;
+  grid-template-columns: 3;
+  grid-row: 2;
+}
+.social-wrapper {
+  grid-row:1/2;
+  grid-column: 1;
+}
+.about-us-wrapper {
+  grid-row: 1/2;
+  grid-column: 2;
+}
+.coopyright {
+  grid-row: 1/2;
+  grid-column: 3;
 }
