--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,17 @@
 :root {
     /*color*/
-  --background-email-color:#F8F7F4;  
+  --general-color:#fff;
+  --general-lightnes:#FEFEFE;
+  --general-light:#F8F7F4; 
+   
+  --general-dark:#CACAC7;
+  --general-darker: #D3D3D2;
   --background-index1-color: #849d8f;
   --background-button-grdient: linear-gradient(180deg, #F26843 0%, #E74A35 100%);
   --background-button-shadow: box-shadow: 0px 2px 2px rgba(172, 16, 0, 0.64);
-  --general-color:#fff;
+  
   --second-color:#323232;
+  --second-color-dark:#000;
     /*user-navigation-button*/
   --background-user-button: rgba(255, 255, 255, 0.2);
   --background-user-button-radius:20px; 
@@ -31,8 +37,16 @@ body {
   font-family: "Roboto", Arial, sans-serif;
   font-size: 16px;
 }
+.visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  …
+}
 .main-header {
-  margin: 0 25px;
+  margin: 0 auto 0 auto;
   width: 1200px;
 }
 .user-button {
@@ -44,6 +58,7 @@ body {
     line-height: 16px;
     padding: 10px 15px 10px 45px;
     cursor: pointer;
+    border:0;
   }
 .button {
   color: var(--general-color);
@@ -61,88 +76,388 @@ body {
 /*header*/
 .header-nav {
   display: flex;
+  align-items: center;
+  margin: 10px 0 0 0;
+  position: relative;
 }
 .nav-list {
   list-style: var(--list-style-no); 
   display: flex;
-  padding: 0;
+  padding: 0 0 50px 0;
+  margin: 0px 365px 0 0;
 }
 .nav-item {
   font-size: 16px;
   line-height: 18px;  
-  margin: 0 30px 0 0; 
+  margin: 0 20px 0 0; 
+  align-self: center;
+  text-align: center;
+}
+.nav-item:nth-child(2) {
+  align-self: bottom;
+}
+.nav-link--active {
+  color: var(--general-color);
+  background-color:#D07058;
+  border-radius: 50px;
+  padding: 10px 15px;
+  min-width: 90px;
+  min-height: 30px;
+  align-items: center;
+  text-decoration: none;
 }
 
+/*Pop up Navigation*/
+.nav-popup {
+  display: none;
+  border-radius: 10px;
+  background-color: var(--general-color);
+  color: var(--second-color);
+}
+
+/*User navigation*/
+.user-navigation-wrapper {
+  align-items: center;
+  /* display: grid;
+  grid-template-columns: repeat(3, 1fr); */
+}
+.nav-button-wrapper {
+  display: flex;
+  align-items: center;
+}
+/*Search Popup*/
+.search-cite--wrapper {
+  display: none;
+  justify-content: center;
+  background-color:var(--general-light);
+  width: 345px;
+  height: 85px; 
+  border-radius: 5px;
+  position: absolute;
+  content: "";
+  bottom:-15px;
+  right: 275px;
+}
+/*Search Popup*/
+.search-cite--input {
+  align-self:center;
+  padding: 15px;  
+  width: 310px;
+  height: 45px;
+  border-radius: 5px;
+}
+.search-cite {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  padding: 5px;
+  margin: 0 10px 0 0;
+  position: relative;
+}
+.search-cite::before {
+  position: absolute;
+  content: "";
+  width:16px;
+  height: 16px;
+  background-image: url(../img/header/search.png);
+  background-position: 0 0;
+  top:8px;
+  left:8px;
+}
+/*Login Popup*/
+.login-cite--wrapper {
+  display: none;
+  justify-content: center;
+  flex-direction: column;
+  width: 275px;
+  max-height: 215px;
+  background-color: var(--general-light);
+  border-radius: 5px;
+  position: absolute;
+  content: "";
+  top: 50px;
+  right: 175px;
+  padding: 20px;
+  z-index: 15;
+}
+
+.login-cite {
+  width: 240px;
+  height: 45px;
+  border-radius: 5px;
+  border: 1px solid var(--general-darker);
+  margin: 0 0 20px 0;
+  padding: 15px;
+  box-sizing: border-box;
+}
+
+.login-cite--button {
+  width: 105px;
+  height: 45px;
+  margin: 0 20px 0 0 ;
+}
+
+.login-cite--user-help {
+  display: inline-block;
+  vertical-align: top;
+  width: 130px;
+  height: 50px;
+  font-size: 13px;
+  line-height: 15px;
+  
+}
+
+.login-cite--forget {
+  display:inline-block;
+  width: 100px;
+  color: var(--second-color);
+  margin: 0 0 10px 0;
+}
+.login-cite--signin {
+  display:inline-block;
+  width: 120px;
+  color: var(--second-color);
+  margin: 0 0 10px 0;
+}
+/*Login Popup end*/
+
+
+/*Вход и Пусто */
+.login {
+  position: relative;
+  margin: 0 10px 0 0;
+}
+.login::before {
+  position: absolute;
+  content: "";
+  width: 20px;
+  height: 19px;
+  background-image: url(../img/header/login.png);
+  background-position: 0 0;
+  top:9px;
+  left:17px;
+}
+/*basket Popup*/
+.basket-cite--wrapper {
+  background-color: var(--general-light);
+  color: var(--second-color);
+  position: absolute;
+  width: 570px;
+  height: 240px;
+  top: 50px;
+  right: 67px;
+  border-radius: 5px;
+  font-size: 13px;
+  line-height: 15px;
+  z-index: 15;
+  display: none;
+}
+.basket-table {
+  margin: 0 15px;
+  border-spacing: 25px;
+  border-bottom: 1px solid var(--general-dark);
+  width: 540px;
+}
+.basket-table--row{
+  height: 35px;
+}
+.basket-table--data {
+
+}
+.data-name {
+  width: 216px;
+  padding: 0 0 0 72px;
+  position: relative;
+}
+.data-name::after {
+  position: absolute;
+  content: "X";
+  width: 11px;
+  height: 11px;
+  top: 15px;
+  left: 0;
+}
+/*.basket-table > data-name > orange*/
+.orange::before {
+  position: absolute;
+  content: "";
+  background-image: url(../img/header/basket-orange-icecream.png);
+  width: 33px;
+  height: 33px;
+  top: 10px;
+  left: 20px;
+}
+/*.basket-table > data-name > stawberry*/
+.stawberry::before {
+  position: absolute;
+  content: "";
+  background-image: url(../img/header/basket-stawberry-icecream.png);
+  width: 33px;
+  height: 33px;
+  top: 0;
+  left: 20px;
+}
+.basket {
+  position: relative;
+}
+.basket::before {
+  position: absolute;
+  content: "";
+  width:21px;
+  height:20px;
+  background-image: url(../img/header/basket.png);
+  background-position: 0 0 ;
+  top:9px;
+  left:17px;
+}
+.table-price {
+  font-size: 15px;
+  line-height: 16px;
+  text-align: right;
+}
+.basket-button {
+  font-size: 18px;
+  line-height: 16px;
+  font-weight: 700;
+  padding: 15px;
+  float: right;
+  margin: 0 15px 0 0;
+}
+/*basket Popup end*/
+.schedule {
+  display: flex;
+  flex-direction: column;
+  
+}
 .schedule-time {
   font-size: 14px;
   font-weight: 700;
   line-height: 16px;   
+  padding: 20px 0 0 0;
+  display: inline-block;
+  margin: 0 0 8px 0;
+  align-self: flex-end;
 }
 .schedule-phone {
   text-decoration: none;  
   font-style: 700;
   font-size: 22px;
   line-height: 24px;
+  align-self: flex-end;
 }
 
 /*main*/
 .slider-wrapper {
   width: 1200px;
-  padding: 0 30px ;
+  min-height: 590px;
+  margin: 0 auto 0 auto;
+  padding: 0 30px;
+  position: relative;
+  display: grid;
 }
+.active-slider {
+  background-color: var(--general-color);
+  grid-row: 4;
+}
+.slider-wrapper--2 {
+  position: absolute;
+  bottom: 55px;
+  left: 10px;
+  display: grid;
+  width: 85px;
+}
+.slider {
+  border: 2px solid;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  grid-row: 4;
+  cursor: pointer;
+}
+.slider-ice-cream--1 {
+  position: absolute;
+  z-index: -5;
+  bottom: 0px;
+  left: 240px;
+}
+.slider-ice-cream--2 {
+  position: absolute;
+  bottom: 0px;
+  left: 555px;
+  z-index: -6;
+}
+
 .slider-title {
-  margin: 0 0 25px 0;
+  margin: 0 auto 0 auto;
   font-style: 700;
   font-size: 60px;
   line-height: 60px;   
   width: 670px;
   min-height: 120px;
+  grid-row: 2;
+  padding: 20px 0 0 0;.
+  z-index: 15;
 }
 
 .main-button {
-  margin: 0;  
+  margin: 0 auto 0 auto;  
   width: 280px;
   min-height: 65px;  
   /* padding: 10px 40px; */
   font-style: 700;
   font-size: 32px;
   line-height: 44px;
-  margin: 0 0 55px 0;
+  grid-row: 3;
+  align-self: center;
+  z-index: 10;
 }
-/* .main-index {
-  margin: 0 25px;
-} */
+.main-index {
+  width: 1200px;
+  margin: 0 auto 0 auto;
+}
+
 /*Малина и Шоколадки*/
 .banner-wrapper { 
-  display: flex;
+  display: grid;
+  grid-template-columns: 2;
+  gap: 25px;
   width: 1200px;
-  margin: 0 0 40px 0;
+  margin: 0 auto 40px auto;
 }
 
 .raspberry {
+  grid-row: 1;
+  grid-column: 1;
   width: 560px;
   min-height: 230px;
   border-radius: 16px;
   background-color:#B30A3E;
   background-image: url(../img/main/raspberry-background.png); 
   background-size: cover;
-  margin: 0 0 0 25px;  
+  margin: 0 0 0 0;  
   padding: 15px 0 0 15px; 
-  
+  box-sizing: border-box;
+  display: grid;
 }
 .raspberry-title {
   margin: 0 0 15px 0;
   font-size: 35px;
   line-height: 41px;
   font-weight: 700;
+  grid-row:1;
+  grid-column: 1/4;
 }
 .raspberry-text {
+  grid-row: 2;
   margin: 0 0 40px 0 ;
   font-size: 18px;
   line-height: 22px;
   font-weight: 700; 
+  grid-column: 1/4;
 }
 .chocolate {
+    grid-row: 1;
+    grid-column: 2;
     width: 560px;
     min-height: 230px;
     border-radius: 16px;
@@ -151,42 +466,53 @@ body {
     background-size: cover; 
     margin: 0 0 0 25px; 
     padding: 15px 0 0 15px; 
+    box-sizing: border-box;
+    display: grid;
 }
 .chocolate-title {
+    grid-column: 1/4;
     margin: 0 0 15px 0;
     font-size: 35px;
     line-height: 41px;
-    font-weight: 700;    
+    font-weight: 700;   
+    grid-row: 1; 
+    min-height: 45px;
 }
 .chocolate-text {
     margin: 0 0 40px 0 ;
     font-size: 18px;
     line-height: 22px;
-    font-weight: 700;    
+    font-weight: 700;
+    grid-row:2 ;    
+    grid-column: 1/4;
 }
 .button-need {
-  /* width: 165px;
-  min-height: 50px; */
+  min-width: 165px;
+  min-height: 50px;
   font-size: 18px;
   line-height: 24px;
   padding: 10px 20px;
-  box-sizing: content-box;
+  box-sizing: border-box;
+  grid-row: 3;
+  grid-column: 3;
+  margin: 0 20px 20px 0;
 }
 /*Список мороженого*/
 .ice-hit-wrapper {  
   width: 1200px;
-  margin: 0 0 40px 0;
+  margin: 0 auto 40px auto;
 }
 
 .hit-list {
   width: 1200px;
   padding: 0;
-  margin: 0;
   list-style: var(--list-style-no);
-  display: flex;
+  display: grid;
+  grid-template-columns: 4;
+  margin: 0 0 0 27px;
 }
 .hit-item {
-
+  grid-row: 1;
 }
 .hit-price {
   margin: 0;
@@ -216,39 +542,90 @@ body {
   background-size: cover;
   width: 1145px;
   min-height: 305px;
-  padding: 25px 20px 0 20px;
-  margin: 25px 0 45px 25px;
+  margin: 25px auto 45px auto;
+  box-sizing: border-box;
+  border-radius: 10px;
 }
 .ceo-title {
   font-size: 24px;
   font-weight: 500;
   line-height: 30px;
   margin: 0 0 20px 0;
-
+  padding: 25px 20px 0 20px;
 }
 .ceo-text-wrapper {
   position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 20px 0 0;
 }
-.ceo-text-left {
+.ceo-text {
   margin: 0 0 35px 0;
-  width: 50%;
-  float: left;
+  padding: 0 0 0 75px;
+  width: 485px ;
+  min-height: 55px;
+  grid-row: 1;
   line-height: 22px;
+  position: relative;
+}
+.ceo-text:nth-child(1)::before {
+  position: absolute;
+  content: "";
+  width: 49px;
+  height: 49px;
+  background-image: url(../img/main/ice-cream.png);
+  background-position: 0 0;
+  top: 10px;
+  left: 15px;
+}
+.ceo-text:nth-child(2)::before {
+  position: absolute;
+  content: "";
+  width: 49px;
+  height: 49px;
+  background-image: url(../img/main/cow.png);
+  background-position: 0 0;
+  top: 10px;
+  left: 15px;
+} 
+.ceo-text:nth-child(3)::before {
+  position: absolute;
+  content: "";
+  width: 49px;
+  height: 49px;
+  background-image: url(../img/main/leaves.png);
+  background-position: 0 0;
+  top: 10px;
+  left: 15px;
+}
+.ceo-text:nth-child(4)::before {
+  position: absolute;
+  content: "";
+  width: 49px;
+  height: 49px;
+  background-image: url(../img/main/thermometer.png);
+  background-position: 0 0;
+  top: 10px;
+  left: 15px;
 }
 .ceo-text-right {
   margin: 0 0 35px 0;
-  width: 50%;
-  float: right;
+  width: 485px;
+  grid-row:2;
+  min-height: 55px;
   line-height: 22px;
 }
 
 .news-email-wrapper {
-  display: flex;
-  margin: 0 0 40px 0;
-  width: 1200px;
+  display: grid;
+  grid-template-columns: 2;
+  margin: 0 auto 40px auto;
+  width: 1145px;
 }
 /*News*/
 .news-wrapper {
+  grid-row: 1;
+  grid-column: 1;
   background: var(--general-color);
   background-image: url(../img/main/Strawberry-background.png);
   background-size: cover;
@@ -257,6 +634,8 @@ body {
   padding: 20px;
   cursor: pointer;
   margin: 0 30px 0 0;
+  box-sizing: border-box;
+  border-radius: 10px;
 }
 .news-text {
   color: var(--second-color);
@@ -272,12 +651,16 @@ body {
 }
 /*email*/
 .email-wrapper {
-  width: 548px;
+  grid-row: 1;
+  grid-column: 2;
+  width: 560px;
   min-height: 210px;
-  background-color: var(--background-email-color);
+  background-color: var(--general-light);
   color: var(--second-color);
   padding: 30px 15px 30px 20px;
   line-height: 22px;
+  box-sizing: border-box;
+  border-radius: 10px;
 }
 .label-email {
   margin: 0 0 50px 0;
@@ -293,15 +676,88 @@ body {
 .email-button {
   padding: 15px 20px;
 }
+/*iframe*/
+.map-wrapper {
+  position: relative;
+}
+.map-wrapper::before {
+  position: absolute;
+  content: "";
+  background-image: url(../img/main/map-icecream.png);
+  width: 80px;
+  height: 140px;
+  bottom: 92px;
+  left: 35.5%;
+  z-index: 20;
+}
+.feedback-wrapper {
+  background-color: var(--general-lightnes);
+  width: 303px;
+  height: 306px;
+  color: var(--second-color);
+  position: absolute;
+  top: 62px;
+  right: 27px;
+  padding: 30px 25px;
+  border-radius: 10px;
+}
+.address-title {
+  margin: 0;
+  font-size: 14px;
+  line-height: 20px;
+  display: block;
+  width: 155px;
+  min-height: 34px;
+}
+.address {
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 700;
+  font-style: normal;
+  display: block;
+  width: 226px;
+  min-height: 37px;
+  margin: 0 0 30px 0;
+}
+.phone-title {
+  font-size: 14px;
+  line-height: 20px;
+  margin: 0 0 10px 0;
+}
+.phone-link {
+  font-size: 18px;
+  line-height: 24px;
+  color: var(--second-color);
+  display: block;
+  text-decoration: none;
+  margin: 0 0 10px 0;
+}
+.work-hours {
+  font-size: 14px;
+  line-height: 20px;
+  margin: 0 0 30px 0;
+  display: block;
+}
+.feedback-button {
+  padding: 15px 30px;
+  border: none;
+}
+/*Feedback popup*/
+
 
 /*footer*/
 .main-footer {
   width: 1200px;
+  margin: 0 auto 0 auto;
   color: var(--second-color);
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 3;
+  grid-row: 2;
+  padding: 30px 0 0 0;
 }
 .social-wrapper {
+  grid-row:1/2;
+  grid-column: 1;
   padding: 0 30px ;
 }
 .social-list {
@@ -313,24 +769,47 @@ body {
 .social-item {
   margin: 0 10px 0 0;
 }
+.social-link {
+  border: 2px solid rgba(255, 255, 255, 0.5);
+  border-radius: 50%;
+  display: block;
+  max-height: 32px;
+}
+.about-us-wrapper {
+
+}
 .about-us-list {
   list-style: var(--list-style-no);
   margin: 0;
   padding: 0;
+  display: grid;
+  gap:10px;
 }
 .about-us-item {
-  margin: 0 0 10px 0;
+  
 }
 .about-us-item-left {
-
+  grid-column: 1;
+  
 }
 .about-us-item-right {
+  grid-column: 2;
 
+}
+.coopyright {
+  grid-row: 1/2;
+  grid-column: 3;
 }
 .coopyright-make {
     display: block;
+    color: var(--general-color);
 }
 /*------------------------------------------------------CATALOG*/
+/*main-wrapper тег main в каталоге*/
+.main-wrapper {
+  width: 1200px;
+  margin: 0 auto 0 auto;
+}
 /*Хлебные крошки*/
 .breadcrumbs-list {
   width: 550px;
@@ -341,12 +820,27 @@ body {
 }
 .breadcrumbs-item {
   margin: 0 20px 10px 0;
+  position: relative;
 }
+.breadcrumbs-item:not(:first-child)::after {
+  position: absolute;
+  content: "";
+  width: 6px;
+  height: 6px;
+  background-image: url(../img/header/arrow.png);
+  background-position: 0 0;
+  top: 7px;
+  left: -12px;
+}
+
 .breadcrumbs-link {
   font-size: 14px;
   line-height: 16px;
   color: var(--general-color);
+}
+.breadcrumbs-link-active {
   text-decoration: none;
+  cursor: default;
 }
 
 .catalog-title {
@@ -383,9 +877,7 @@ body {
 .fat-wrapper {
   
 }
-.toppings-text {
-  
-}
+/*Catalog toppings*/
 .toppings-wrapper {
   padding: 0 30px;
   width: 750px;
@@ -410,16 +902,18 @@ body {
   padding: 0;
   margin: 0 0 110px 0;
   list-style: var(--list-style-no);
-  display: flex;
   width: 1200px;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap:40px;
 
 }
 .product-item {
-  margin: 0 25px 0 0;
 }
 .product-text {
   width: 265px;
+  margin: 0;
+  color: var(--general-color);
 }
 /*Страницы*/
 .page-catalog {
@@ -432,6 +926,7 @@ body {
   list-style: var(--list-style-no);
   display: flex;
   justify-content: flex-end;
+  align-items: center;
 }
 .page-item a {
   color:var(--general-color);
@@ -444,81 +939,13 @@ body {
   width: 25px;
   height: 25px;
   margin: 0 20px 0 0;
+
 }
 /*как мне здесь центрировать текст */
 .active a {
  color: var(--second-color);
-  padding: 7px 7px 7px 7px;
+  padding: 3px 7px 7px 7px;
+  display: inline-block;
 }
 
-/*main grid Малина и Шоколад*/
-.banner-wrapper {
-  display: grid;
-  grid-template-columns: 2;
-  gap: 25px;
-}
-.raspberry {
-  grid-row: 1;
-  grid-column: 1;
-}
-.chocolate {
-  margin: 0;
-  grid-row: 1;
-  grid-column: 2;
-}
-/*HIT GRID*/
-.hit-list {
-  display: grid;
-  grid-template-columns: 4;
-  margin: 0 0 0 27px;
-}
-.hit-item {
-  grid-row: 1;
-}
-/*CEO Grid*/ 
-.ceo-text-wrapper {
-  display: grid;
-  grid-template-columns: 2;
-  
-}
-.ceo-text-left {
-  width: 485px ;
-  min-height: 55px;
-  grid-row: 1;
-}
-.ceo-text-right {
-  width: 485px;
-  grid-row:2;
-  min-height: 55px;
-}
-.news-email-wrapper {
-  display: grid;
-  grid-template-columns: 2;
-}
-.news-wrapper {
-  grid-row: 1;
-  grid-column: 1;
-}
-.email-wrapper {
-  grid-row: 1;
-  grid-column: 2;
-}
-
-/*Footer*/
-.main-footer {
-  display: grid;
-  grid-template-columns: 3;
-  grid-row: 2;
-}
-.social-wrapper {
-  grid-row:1/2;
-  grid-column: 1;
-}
-.about-us-wrapper {
-  grid-row: 1/2;
-  grid-column: 2;
-}
-.coopyright {
-  grid-row: 1/2;
-  grid-column: 3;
-}
+/* Catalog GRID кажется лучше будет если каталог будет на флексах*/
