--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@
   box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.4);
   padding: 7px 0px;
   margin: 0 ;
-  display: block;
+  /* display: none; Key */
   list-style: none;
   border-radius: 5px;
   background-color: var(--general-color);
@@ -168,25 +168,44 @@
   z-index: 10;
 }
 .link-index--active {
-  color: var(--second-color);
-  background-color:var(--general-color);
+   /*Key*/
   border-radius: 50px;
   margin: -9px -13px;
   padding:9px 13px;
   min-width: 90px;
   min-height: 30px;
   align-items: center;
-  text-decoration: none;
+  font-weight: 400;
+}
+
+.link-index--active:hover {
+  color: var(--second-color);
+  background-color:var(--general-color);
+  text-decoration: none;  
   font-weight: 700;
+}
+.link-index--active + .sub-nav--list{
+  display: none;
+  transition: 4;
+} 
+.link-index--active:hover + .sub-nav--list{
+  display: block;
+  color: var(--second-color);
+  background-color:var(--general-color);
+  text-decoration: none;
+  transition: 4;
+
 }
 
 .sub-nav--item {
   min-height: 25px;
-  /* padding: 0px 0 7px 15px; */
-  text-align: center;
+}
+.sub-nav--item:first-child {
+  padding: 0px 0 0 15px;
 }
 .sub-nav--item a{
   text-decoration: none;
+  padding: 0px 0 7px 15px;
 }
 
 .sub-nav--item:first-child {
@@ -349,10 +368,10 @@
 }
 /*basket Popup*/
 .basket-cite--wrapper {
+  padding: 0 15px 0 20px;
   background-color: var(--general-light);
   color: var(--second-color);
   position: absolute;
-  width: 570px;
   height: 240px;
   top: 50px;
   right: 67px;
@@ -361,31 +380,38 @@
   line-height: 15px;
   z-index: 15;
   display: none;
+  width: 540px;
+  box-sizing: border-box;
 }
 .basket-table {
-  margin: 0 15px;
-  border-spacing: 25px;
+  margin: 0 0 15px 0;
+  width: 505px;
+  border-spacing: 0 25px;
   border-bottom: 1px solid var(--general-dark);
-  width: 540px;
+  float: right;
+  text-align: right;
 }
 .basket-table--row{
   height: 35px;
+
 }
 .basket-table--data {
 
 }
 .data-name {
+  padding: 0 0 0 64px;
   width: 216px;
-  padding: 0 0 0 72px;
+  text-align: left;
   position: relative;
 }
 .data-name::after {
   position: absolute;
   content: "X";
-  width: 11px;
-  height: 11px;
-  top: 15px;
+  font-size: 15px;
+  font-weight: 400;
+  top:10px;
   left: 0;
+  cursor: pointer;
 }
 /*.basket-table > data-name > orange*/
 .orange::before {
@@ -394,7 +420,7 @@
   background-image: url(../img/header/basket-orange-icecream.png);
   width: 33px;
   height: 33px;
-  top: 10px;
+  top: 0px;
   left: 20px;
 }
 /*.basket-table > data-name > stawberry*/
@@ -425,6 +451,7 @@
   background-position: -52px 69px;
 }
 .table-price {
+  margin: 0 0 15px 0;
   font-size: 15px;
   line-height: 16px;
   text-align: right;
@@ -435,7 +462,7 @@
   font-weight: 700;
   padding: 15px;
   float: right;
-  margin: 0 15px 0 0;
+  margin: 0;
 }
 /*basket Popup end*/
 .schedule {
@@ -474,6 +501,8 @@
 .slider-list {
   list-style: none;
   position: relative;
+  margin: 0;
+  padding: 0;
 }
 .slider-item {
   display: none;
@@ -499,7 +528,7 @@
   min-height: 580px;
   position: absolute;
   bottom: -40px;
-  left: 235px;
+  left: 233px;
   z-index: 0;
 }
 .slider-active--2 {
@@ -602,7 +631,6 @@ box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
   gap: 25px;
   margin: 0 0 40px 0;
   width: 1200px;
-  padding: 0 27px;
   box-sizing: border-box;
 }
 
@@ -720,11 +748,28 @@ box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
   z-index: 1;
   border-radius: 50%;
 }
+.price-text-wrapper {
+  display: block;
+  position: absolute;
+  bottom:0px;
+  left: 10px;
+}
+.price-text-wrapper:hover {
+
+}
+.price-description-wrapper {
+  display: flex;
+  justify-content: center;
+}
 .hit-price {
+  display: inline-block;
   margin: 0;
   font-size: 45px;
   font-weight: 700;
   line-height: 45px;
+}
+.catalog-hit-price {
+  margin: 0 0 35px 0;
 }
 .kg-text {
   font-size: 30px;
@@ -861,15 +906,21 @@ box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
   grid-column: 2;
   width: 560px;
   min-height: 210px;
-  background-color: var(--general-light);
   color: var(--second-color);
-  padding: 30px 15px 30px 20px;
+  background-image: repeating-linear-gradient(-45deg, #f8f7f4 0px, #f8f7f4 9px, #92cdff 10px, #92cdff 19px, #f8f7f4 20px, #f8f7f4 29px, #fe9e90 30px, #fe9e90 39px);
   line-height: 22px;
   box-sizing: border-box;
   border-radius: 10px;
   position: relative;
+  padding: 6px;
 }
-.email-wrapper::before {
+.email-form {
+  /* min-height: 208px; */
+  background-color: var(--general-light);
+  padding: 30px 15px 30px 20px;
+  border-radius: 10px;
+}
+/* .email-wrapper::before {
   content: '';
   position: absolute;
   top:-6px; left:-6px; z-index:-1;
@@ -878,8 +929,7 @@ box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
   border-radius: 20px;
   background-image: repeating-linear-gradient(-45deg, #f8f7f4 0px, #f8f7f4 9px, #92cdff 10px, #92cdff 19px, #f8f7f4 20px, #f8f7f4 29px, #fe9e90 30px, #fe9e90 39px);
   box-shadow: 0 3px 12px -2px black;
- 
-}
+} */
 .label-email {
   margin: 0 0 50px 0;
   display: inline-block;
@@ -1062,7 +1112,7 @@ box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
   display: grid;
   grid-template-columns: 3;
   grid-row: 2;
-  padding: 30px 0 0 0;
+  padding: 30px 0 30px 0;
 }
 .social-wrapper {
   grid-row:1/2;
@@ -1094,31 +1144,40 @@ box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
   list-style: var(--list-style-no);
   margin: 0;
   padding: 0;
+  width: 310px;
   display: grid;
+  grid-template-columns: 180px 180px;
+  grid-template-rows: auto auto;
   gap:10px;
 }
-.about-us-item {
-  
+.about-us-item a{
+  font-size: 13px;
 }
-.about-us-item-left {
-  grid-column: 1;
-  
-}
-.about-us-item-right {
-  grid-column: 2;
+.heart:first-child {
+  position: relative;
 
+} 
+.heart::before {
+  position: absolute;
+  content: "";
+  width: 15px;
+  height: 13px;
+  background-image: url(../img/footer/heart.png);
+  bottom: 1px;
+  left: -20px;
 }
 .coopyright {
   grid-row: 1/2;
   grid-column: 3;
 }
 .coopyright-make {
+  vertical-align: top;
+  font-size: 12px;
     display: block;
     color: var(--general-color);
 }
 .coopyright-make-link {
   color: var(--general-color);
-  color: inherit;
 
 }
 .coopyright-make-link:visited {
@@ -1173,7 +1232,7 @@ box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
 .form-sort-wrapper {
   display: flex;
   flex-wrap: wrap;
-  width: 1000px;  
+  max-width: 1000px;
 }
 .head-sort-wrapper {
   display: flex;
@@ -1196,9 +1255,7 @@ box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
   height: 36px;
   border-radius: 20px;
 }
-.sort-select {
-  background: var(--general-color);
-}
+
 .sort-select:hover,
 .sort-select:active{
   background: var(--general-color);
@@ -1257,7 +1314,7 @@ box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
 
 }
 .fat-list {
-  padding: 0 15px;
+  padding: 0 15px 0 0;
   margin: 0;
   list-style: none;
   display: flex;
@@ -1271,15 +1328,19 @@ box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
   border-radius: 70px;
 }
 
-.fat-item:not(:last-child) {
-  margin: 0 52px 0 0;
+/* .fat-item:not(:last-child) {
+  padding: 0 52px 0 0;
+} */
+.fat-item label {
+  padding: 0 0 0 52px;
 }
-.fat-item:first-child {
-  margin: 0 47px;
+.fat-item:first-child label {
+  padding-right: 0;
 }
 .fat-item {
   position: relative;
 }
+
 .fat-input + label {
   display: block;
   cursor: pointer;
@@ -1290,16 +1351,20 @@ box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
   width: 22px;
   height: 22px;
   background: transparent;
-  border: 2px solid var(--general-color);
+  border: 3px solid var(--general-color);
   border-radius: 50%;
-  top: -3px;
+  top: -4px;
   right: 60px;
+  z-index: -2;
 }
 .fat-item:first-child::before {
   right: 35px;
 }
+.fat-item:first-child {
+  padding-right: 7px;
+}
 .fat-item:last-child::before {
-  right: 85px;
+  right: 84px;
 }
 .fat-input:checked + label::before {
   content: "";
@@ -1307,7 +1372,7 @@ box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
   width: 8px;
   height: 8px;
   top: 6px;
-  left: -31px;
+  left: 27px;
   background-color: var(--general-color);
   border-radius: 50%;
 }
@@ -1315,17 +1380,23 @@ box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
 .toppings-filter {
   padding: 0 30px;
   margin: 0 0 40px 0;
+  
+}
+.toppings-filter--wrapper {
+  display: flex;
 }
 .toppings-title {
-  width: 300px;
+  width: 100%;
   margin: 0 0 7px 0;
   font-weight: 500;
   font-size: 14px;
   line-height: 16px;
 }
 .toppings-list {
+  min-width: 655px;
+  width: 625px;
   padding: 10px 15px 10px 50px;
-  margin: 0;
+  margin: 0 15px 0 0;
   list-style: none;
   display: flex;
   justify-content: flex-start;
@@ -1348,31 +1419,44 @@ box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
 .toppings-input:focus + label {
   color: var(--second-color);
 } */
+
+
 .toppings-input + label::before {
   position: absolute;
   content: "";
-  width: 20px;
-  height: 20px;
+  width: 19px;
+  height: 18px;
   border: 2px solid #fff;
-  top: -3px;
-  left: -33px;
+  top: -1px;
+  left: -30px;
   border-radius: 2px;
 }
-.toppings-input:checked + label::before{
+
+/* .toppings-input:checked + label::before{
   width: 24px;  
-} 
-.toppings-input:checked + label::after {
-  content: "\2714";
+}  */
+.toppings-input:checked + label::before {
+  content: "";
   position: absolute;
   width: 24px;
-  height: 20px;
-  font-size: 30px;
-  left: -27px;
-  top: -9px;
+  height: 21px;
+  left: -30px;
+  top: -1px;
   z-index: 1;
+  background-image: url(../img/main/checkbox-on.png);
+  opacity: 1;
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  border: none;
 }
-.toppings-label {
+.toppings-item {
   padding: 0 52px 0 0;
+}
+.toppings-item:nth-child(5n) {
+  padding: 0;
+}
+.toppings-button {
+  border: 2px solid var(--general-color)
 }
 .toppings-filter .user-button {
   padding-left:15px;
@@ -1392,28 +1476,49 @@ box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
   gap:40px;
 
 }
-.product-item a{
-
+.product-item {
+  position: relative;
+  min-height: 95px;
 }
-.product-item a:hover {
+.product-link .quick-view-button{
+  display: none;
+}
+.product-link:hover .quick-view-button {
+  display: block;
+}
+.product-link:hover {
+  position: absolute;
   display: block;
   background: rgba(204, 204, 204, 0.5); 
   /* padding: 6px 13px;     */
   border-radius: 4px;
-  /* width: 293px;
-  height: 402px; */
-  
+  width: 293px;
+  height: 402px;
+  z-index: 1;
 }
-.product-item a {
+.product-link .price-text-wrapper {
+  bottom:-50px;
+  left: 10px;
+}
+.product-link:hover .price-text-wrapper {
+  bottom: 36px;
+  left: 10px;
+}
+.product-link {
   color: var(--general-color);
   text-decoration: none;
-1111dsd
 }
 
 .product-text {
   width: 265px;
-  margin: 0;
+  margin: 0 0 15px 0 ;
   color: var(--general-color);
+  text-align: center;
+}
+.quick-view-button {
+  width: 200px;
+  min-height: 45px;
+  padding: 10px 15px;
 }
 /*Страницы*/
 .page-catalog {
